--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,7 @@ body {
 }
 
 #home .nav {
+  font-family: "ChosunSm";
   position: relative;
   margin: 10px;
   z-index: 20;
@@ -441,6 +442,7 @@ body {
 }
 
 #home .content .tit .desc {
+  font-family: "ChosunSm";
   position: absolute;
   left: 30%;
   transform: translate(50%, 0);
@@ -487,7 +489,7 @@ body {
 }
 
 #home .content .tit .desc h2 {
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   font-size: 84px;
   margin: 10px 0px;
   width: 600px;
@@ -511,6 +513,10 @@ body {
 
 #home .content .tit .desc h2:nth-of-type(3) {
   display: none;
+}
+
+#home .content .tit .desc p {
+  line-height: 1.5;
 }
 
 #home .content .tit .desc p:nth-of-type(2) {
@@ -622,14 +628,15 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #fff;
+  font-family: "ChosunSm";
   background-size: cover;
 }
 
 #about > h2 {
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   text-align: center;
-  font-size: 90px;
-  padding: 9px 0px;
+  font-size: 60px;
+  padding: 20px 0px;
   color: #222;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -676,7 +683,7 @@ body {
 }
 
 #about .card h2 {
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   font-size: 36px;
   padding: 16px 0px;
   color: #000;
@@ -691,6 +698,7 @@ body {
   line-height: 29px;
   list-style: disc;
   margin-left: 20px;
+  color: #666;
 }
 
 #about .card2 ul li {
@@ -768,7 +776,7 @@ body {
 }
 
 #web .left_nav h2 {
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   writing-mode: vertical-rl;
   position: absolute;
   width: 147px;
@@ -788,6 +796,7 @@ body {
 
 #web .p_desc h2 {
   position: absolute;
+  font-family: "Giants-Inline";
   left: 60px;
   bottom: 0;
   padding: 18px 16px 18px 18px;
@@ -811,6 +820,15 @@ body {
   width: 1920px;
   left: 88%;
   top: 0;
+  font-family: "ChosunSm";
+}
+
+#web .panerl h3 {
+  font-family: "ChosunSm";
+}
+
+#web .panerl p {
+  line-height: 1.3;
 }
 
 #web .panerl .panerl_1,
@@ -1881,6 +1899,7 @@ body {
   font-size: 20px;
   top: 850px;
   left: 110px;
+  font-family: "ChosunSm";
   animation: keyword_ani 0.5s 0.2s ease infinite alternate;
 }
 
@@ -1924,9 +1943,9 @@ body {
 }
 
 .panerl_3 .s_tit {
-  font-size: 65px;
+  font-size: 50px;
   font-weight: 600;
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   color: #333333;
   text-shadow: 2px 2px 0px #ffffff, 5px 4px 0px rgba(0, 0, 0, 0.15);
 }
@@ -1991,7 +2010,7 @@ body {
 .panerl .s_tit {
   font-size: 65px;
   font-weight: 600;
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   color: #333333;
   text-shadow: 2px 2px 0px #ffffff, 5px 4px 0px rgba(0, 0, 0, 0.15);
 }
@@ -2048,6 +2067,7 @@ body {
 /*############### #contact ###############  */
 #contact {
   position: fixed;
+  font-family: "ChosunSm";
   left: 0;
   top: 0;
   width: 100%;
@@ -2138,7 +2158,7 @@ body {
 }
 
 #contact .contact_box > h2 {
-  font-family: "Pretendard-Regular";
+  font-family: "ChosunSm";
   position: absolute;
   left: -32px;
   top: -67px;
@@ -2168,7 +2188,6 @@ body {
 
 #contact .contact_box .c_box .con_left .hover {
   position: static;
-  font-family: "Pretendard-Regular";
   font-size: 45px;
   letter-spacing: 10px;
 }
@@ -2243,17 +2262,12 @@ body {
 }
 
 #contact .contact_box .c_box .con_right .address ul li {
-  font-family: "Pretendard-Regularm";
   font-size: 18px;
   margin: 10px 0;
 }
 
 #contact .contact_box .c_box .con_right .address ul li i {
   padding-right: 10px;
-}
-
-#contact .contact_box .c_box .con_right .address ul li:nth-child(4) {
-  font-family: "Pretendard-Regular";
 }
 
 #contact .to_top {
